--- a/manifest.plist
+++ b/manifest.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>http://www.example.com/ios/applications.ipa</string>
+					<string>http://jadevand.github.io/blankedephemeral.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
